Added css and html content

--- a/index.html
+++ b/index.html
@@ -54,42 +54,43 @@
 
         <!-- portfolio container -->
         <section class="page-section" id="work">
+
             <h2>Work</h2>
             <div class="flex-container">
                 <!-- First card -->
-                <div class="flex-item">
-                <a href="#" class="first-child">
+                <div class="flex">
+                <a href="#" class="first-child flex-item">
                     <div>
-                        <h3>title1</h3>
-                        <span>category</span>
+                        <h3>Surf Report</h3>
+                        <span>MERN Stack</span>
                     </div>
                 </a>
                 <!-- Second card -->
-                <a href="#" class="led-wall">
+                <a href="#" class="led-wall flex-item">
                     <div>
-                        <h3>title2</h3>
-                        <span>category</span>
+                        <h3>LED wall</h3>
+                        <span>Node/IoT</span>
                     </div>
                 </a>
                 <!-- Third card -->
-                <a href="#" class="react-calc">
+                <a href="#" class="react-calc flex-item">
                     <div>
-                        <h3>title3</h3>
-                        <span>category</span>
+                        <h3>Calculator</h3>
+                        <span>React/JavaScript/CSS</span>
                     </div>
                 </a>
                 <!-- Forth card -->
-                <a href="#" class="pastel-puzzles">
+                <a href="#" class="pastel-puzzles flex-item">
                     <div>
-                        <h3>title4</h3>
-                        <span>category</span>
+                        <h3>Pastel Puzzles</h3>
+                        <span>MERN Stack</span>
                     </div>
                 </a>
                 <!-- Fifth Card -->
-                <a href="#" class="run-buddy">
+                <a href="#" class="run-buddy flex-item">
                     <div>
-                        <h3>title5</h3>
-                        <span>category</span>
+                        <h3>Run Buddy</h3>
+                        <span>HTML/CSS</span>
                     </div>
                 </a>
                 </div>
