--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <!-- main logo / nav -->
     <header>
         <nav>
-            </label>
             <label class="name">Daniela</label>
             <ul>
                 <li><a class="active" href="#abt">About Me</a></li>
@@ -59,35 +58,35 @@
             <div class="flex-container">
                 <!-- First card -->
                 <div class="flex">
-                <a href="#" class="first-child flex-item">
+                <a href="/" target="_blank" class="first-child flex-item">
                     <div>
                         <h3>Surf Report</h3>
                         <span>MERN Stack</span>
                     </div>
                 </a>
                 <!-- Second card -->
-                <a href="#" class="led-wall flex-item">
+                <a href="/" target="_blank" class="led-wall flex-item">
                     <div>
                         <h3>LED wall</h3>
                         <span>Node/IoT</span>
                     </div>
                 </a>
                 <!-- Third card -->
-                <a href="#" class="react-calc flex-item">
+                <a href="/" target="_blank" class="react-calc flex-item">
                     <div>
                         <h3>Calculator</h3>
                         <span>React/JavaScript/CSS</span>
                     </div>
                 </a>
                 <!-- Forth card -->
-                <a href="#" class="pastel-puzzles flex-item">
+                <a href="/" target="_blank" class="pastel-puzzles flex-item">
                     <div>
                         <h3>Pastel Puzzles</h3>
                         <span>MERN Stack</span>
                     </div>
                 </a>
                 <!-- Fifth Card -->
-                <a href="#" class="run-buddy flex-item">
+                <a href="/" target="_blank" class="run-buddy flex-item">
                     <div>
                         <h3>Run Buddy</h3>
                         <span>HTML/CSS</span>
@@ -100,11 +99,23 @@
         <!-- contact -->
         <section class="page-section contact" id="contact-me">
             <h2>Contact Me</h2>
-        </section>
-
-        <!-- resume -->
-        <section class="page-section resume" id="resume">
-            <h2>Resume</h2>
+            <div class="content-wrapper">
+                <div class="contact-list" id="contact-list">
+                    <ul>
+                        <li>
+                            <a href="mailto:dherteg@icloud.com">Email</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Dani-Her" target="_blank">GitHub</a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/daniela-herteg-13baa61a6/" target="_blank">LinkedIn</a>
+                        </li>
+                        <li>
+                            <a href="/" target="_blank">Phone Number</a>
+                        </li>
+                    </ul>
+            </nav>
         </section>
     </main>
 </body>
